# earchive

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  vulture_whitelist.py
.github/workflows/: python-app.yml  python-check.yml
archivetools/: __main__.py  cli.py  compare.py  doc.py  main.py  names.py  parse_config.py  progress.py  rename.py
archivetools/check/: __init__.py  check.py  names.py  print.py  utils.py
archivetools/rename/: __init__.py  check.py  doc.py  names.py  parse_config.py  print.py  rename.py  utils.py
earchive/: doc.py  errors.py  main.py  names.py  progress.py
earchive/check/: __init__.py  check.py  enum.py  names.py  parse_config.py  print.py  utils.py
earchive/check/config/: __init__.py  config.py  default.py  names.py  parse.py
earchive/commands/: analyze.py
earchive/commands/check/: __init__.py  check.py  names.py  print.py  utils.py
earchive/commands/check/config/: __init__.py  cast.py  config.py  default.py  names.py  parse.py  substitution.py
earchive/doc/: doc.py
earchive/utils/: fs.py  os.py  path.py  progress.py  toml.py
tests/: conftest.py  mock_filesystem.py  test_check.py  test_creation.py  test_fastpath.py
