[tool.poetry]
name = "archivetools"
version = "0.1.0"
description = ""
authors = ["MatteoBouvierVidium <m.bouvier@vidium-solutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.0"
natsort = "^8.4.0"
typer = "^0.9.0"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
vulture = "^2.11"
pre-commit = "^3.6.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    "vulture_whitelist.py",
]

[tool.vulture]
paths = [
    "archivetools", 
    "vulture_whitelist.py",
]

[tool.mypy]
exclude = [
    "tests",
    "vulture_whitelist.py",
]
