[tool.poetry]
name = "archivetools"
version = "0.1.0"
description = ""
authors = ["MatteoBouvierVidium <m.bouvier@vidium-solutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.0"
natsort = "^8.4.0"
typer = "^0.9.0"

# optional
pytest = { version = "^7.4.4", optional=true }
vulture = { version = "^2.11", optional=true }
pre-commit = { version = "^3.6.0", optional=true }
mypy = { version = "^1.8.0", optional=true }
scalene = { version = "^1.5.45", optional=true }
ruff = { version = "^0.6.9", optional=true }

[tool.poetry.extras]
dev = ["pytest", "vulture", "pre-commit", "mypy", "scalene", "ruff"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    "vulture_whitelist.py",
]

[tool.vulture]
paths = [
    "archivetools", 
    "vulture_whitelist.py",
]

[tool.mypy]
exclude = [
    "tests",
    "vulture_whitelist.py",
]
